# apo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md
CMake/: add_dependency_folder.cmake  compiler_flags.cmake
apo/: CMakeLists.txt
apo/include/apo/core/: benchmark.hpp  benchmark.inl  logger.hpp  logger.inl  math.hpp  math.inl  type.hpp  type.inl  utils.hpp
apo/include/apo/gpu/: algorithm.cuh  algorithm.hpp  algorithm.inl  benchmark.cuh  heap.hpp  lbvh.cuh  lbvh.inl  math.cuh  math.inl  memory.cuh  memory.inl  setup.hpp  setup.inl  topology_update.cuh  topology_update.inl  utils.cuh
apo/src/core/: benchmark.cpp  logger.cpp  utils.cpp
apo/src/gpu/: algorithm.cpp  algorithm.cu  benchmark.cu  lbvh.cu  memory.cu
app/: CMakeLists.txt
app/benchmarks/: CMakeLists.txt  benchmark.cu  benchmark.hpp  benchmark_cavity.cu  benchmark_contributing_nearest.cu  benchmark_knn.cu  benchmark_stages.cu  full_benchmarks_clouds.cpp  full_benchmarks_dataset.cpp  full_benchmarks_proteins.cpp
app/cavity/: CMakeLists.txt  main.cpp  utils.cu  utils.hpp
app/cavity/CMake/: FindCUDAToolkit.cmake  FindOptiX.cmake  FindPackageMessage.cmake  compile_to_ptx.cmake
app/cavity/optix/: context.cu  context.cuh  context.inl  geometry.cu  geometry.cuh  geometry.inl  geometry_pipeline.cu  geometry_pipeline.cuh  geometry_pipeline.inl  pipeline.cu  pipeline.cuh  pipeline.inl  program.cu  program.cuh  program.inl  setup.cuh  sphere_module.cu  sphere_module.cuh
app/cavity/shaders/: data.cuh  find_occlusion.cu
app/common/: CMakeLists.txt  samples.cpp  samples.hpp  voronota.hpp
app/common/samples/: 1A2Z.mmtf  1A3F.mmtf  3DIK.mmtf  4V60.mmtf  4V6X.mmtf  4V8W.mmtf  5ZCK.mmtf  6QZ9.mmtf  6RXU.mmtf  7LER.mmtf  7P3W.mmtf  8ID8.mmtf
app/memory/: CMakeLists.txt  main.cu
app/precision/: CMakeLists.txt  precision.cpp  precision.hpp  precision_apo.cpp  precision_robust.cpp  precision_voronota.cpp
app/topology/: CMakeLists.txt  topology.cpp  topology.hpp  topology_apo.cu  topology_robust.cpp  topology_voronota.cpp
app/visualization/: CMakeLists.txt  main.cpp
